--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,3 +15,14 @@
   margin-right: auto;
 }
 
+TH {
+  width: 150px;
+  text-align: left; /* Выравнивание по левому краю */
+  background: black; /* Цвет фона */
+  color: white; /* Цвет текста */
+}
+
+TD {
+  text-align: center; /* Выравнивание по центру */
+}
+
