Добавлен вывод цифр внизу по цетру страницы

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,4 +82,6 @@
       </tbody>
     </table>
   </div>
+  <p align="centre"><strong>{{one}}/{{two}}/{{three}}/{{four}}/{{five}}/{{six}}/{{seven}}/{{eight}}/{{nine}} ЧС {{oneNumber}}</strong></p>
 </div>
+
