--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,3 +46,13 @@ input{
   }
 }
 
+  p {
+    text-align: center;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border: none;
+  }
+
+
