--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,7 @@ small{
   hight: 500px;
   margin-left: auto;
   margin-right: auto;
+  text-decoration-color: #ffffff;
 }
 
 TH {
@@ -31,6 +32,7 @@ TH {
 
 TD {
   text-align: center; /* Выравнивание по центру */
+  color: #ffffff;
 }
 
 span{
