--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 body{
-  background: url(https://i.pinimg.com/originals/77/89/f9/7789f9db8eedaec7e114f3d52e3f563b.jpg);
+  background-size: 100%;
   color: #ffffff;
 }
