--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="container">
   <h2 class="myclass">{{title}}</h2>
-
-
   <form [formGroup]="form" (ngSubmit)="addTask()">
     <div align="centre">
       <div class="myclass2">
@@ -77,7 +75,9 @@
         <th>Привычки: {{three.length + six.length + nine.length}}</th>
       </tr>
       <tr>
-        <td><strong>Быт: {{four.length + five.length + six.length}}</strong></td>
+        <td></td>
+        <th>Быт: {{four.length + five.length + six.length}}</th>
+        <td></td>
       </tr>
       </tbody>
     </table>
