add to table name of cell

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,11 +55,11 @@
       </thead>
       <tbody>
       <tr>
-        <td>
-          {{one}}
+        <td><small>Характер</small>
+          <p>{{one}}</p>
         </td>
-        <td>{{four}}</td>
-        <td>{{seven}}</td>
+        <td>Здоровье{{four}}</td>
+        <td>Удача{{seven}}</td>
         <th>Цель: {{one.length + four.length + seven.length }}</th>
       </tr>
       <tr>
