add link to play market

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" xmlns:font-size="http://www.w3.org/1999/xhtml">
   <h2 class="myclass">{{title}}</h2>
   <form [formGroup]="form" (ngSubmit)="addTask()">
     <div align="centre">
@@ -81,7 +81,7 @@
     </table>
   </div>
   <p align="centre"><strong>{{one}}/{{two}}/{{three}}/{{four}}/{{five}}/{{six}}/{{seven}}/{{eight}}/{{nine}} ЧС {{digestSoul}}</strong></p>
-  <p align="centre"> Теперь вы можете скачать приложение для рассчета в Google Play Market, перейдите на телефоне по ссылке ниже для скачивания приложения.</p>
+  <h2> <p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market, перейдите на телефоне по ссылке ниже, для скачивания приложения.</p> </h2>
   <p align="centre"> <a href="https://play.google.com/store/apps/details?id=com.zelianko.numerologic&pli=1">Скачайте приложение в Google Play Market</a></p>
 </div>
 
