--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,7 +18,7 @@ small{
 
 .table{
   width: 500px;
-  hight: 500px;
+//  hight: 500px;
   margin-left: auto;
   margin-right: auto;
   text-decoration-color: #11118b;
