[AN-002]add link to yandex ads

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,6 +24,10 @@ small{
   text-decoration-color: #11118b;
 }
 
+.row-centered {
+  text-align:center;
+}
+
 TH {
   width: 150px;
   text-align: left; /* Выравнивание по левому краю */
