--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<meta name="google-adsense-account" content="ca-pub-9309082672837567">
+
 <!-- Yandex.RTB -->
 <script>window.yaContextCb=window.yaContextCb||[]</script>
 <script src="https://yandex.ru/ads/system/context.js" async></script>
@@ -43,8 +45,9 @@
           <small *ngIf="form.get('year').errors.minLength">Год должен быть записан в формате ГГГГ</small>
         </div>
       </div>
-
+      <div class="myclass2">
       <button type="submit" class="btn btn-dark" [disabled]="form.invalid">Пуск</button>
+      </div>
     </div>
   </form>
 
@@ -85,7 +88,7 @@
     </table>
   </div>
   <p align="centre"><strong>{{one}}/{{two}}/{{three}}/{{four}}/{{five}}/{{six}}/{{seven}}/{{eight}}/{{nine}} ЧС {{digestSoul}} </strong></p>
-  <h2> <p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market, перейдите на телефоне по ссылке ниже, для скачивания приложения.</p> </h2>
+  <h2> <p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market</p> </h2>
   <div class="row-centered">
   <a href='https://play.google.com/store/apps/details?id=com.zelianko.numerologic&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
     <img width="240" height="92" alt='Доступно в Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/ru_badge_web_generic.png'/></a>
@@ -105,5 +108,8 @@
       })
     })
   </script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9309082672837567"
+          crossorigin="anonymous"></script>
 </div>
 
