--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,9 +30,10 @@ small{
 
 TH {
   width: 150px;
-  text-align: left; /* Выравнивание по левому краю */
+  text-align: center; /* Выравнивание по левому краю */
   background: rgba(139, 229, 201, 0.56); /* Цвет фона */
   color: #11118b; /* Цвет текста */
+  font-size: 12px;
 }
 
 TD {
