[AN-006]add badge

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <meta name="google-adsense-account" content="ca-pub-9309082672837567">
 
 <!-- Yandex.RTB -->
-<script>window.yaContextCb=window.yaContextCb||[]</script>
-<script src="https://yandex.ru/ads/system/context.js" async></script>
+<!--<script>window.yaContextCb=window.yaContextCb||[]</script>-->
+<!--<script src="https://yandex.ru/ads/system/context.js" async></script>-->
 
 <div class="container" xmlns:font-size="http://www.w3.org/1999/xhtml">
   <h2 class="myclass">{{title}}</h2>
@@ -108,6 +108,24 @@
       })
     })
   </script>
+  <!-- Yandex.RTB R-A-3233177-3 -->
+  <div id="yandex_rtb_R-A-3233177-3"></div>
+  <script>
+    window.yaContextCb.push(()=>{
+      Ya.Context.AdvManager.render({
+        "blockId": "R-A-3233177-3",
+        "renderTo": "yandex_rtb_R-A-3233177-3"
+      })
+    })
+  </script>
+  <!-- Yandex Native Ads C-A-3233177-2 -->
+  <div id="yandex_rtb_C-A-3233177-2"></div>
+  <script>window.yaContextCb.push(()=>{
+    Ya.Context.AdvManager.renderWidget({
+      renderTo: 'yandex_rtb_C-A-3233177-2',
+      blockId: 'C-A-3233177-2'
+    })
+  })</script>
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9309082672837567"
           crossorigin="anonymous"></script>
