--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,93 +1,144 @@
+<div class="container">
 
-<div class="container" xmlns:font-size="http://www.w3.org/1999/xhtml">
-  <h2 class="myclass">{{title}}</h2>
-  <form [formGroup]="form" (ngSubmit)="addTask()">
-    <div align="centre">
-      <div class="myclass2">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="inputGroup-day">День</span>
-          <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
-                 formControlName="day"
-                 maxlength="2"
-                 size="10">
-        </div>
-        <div *ngIf="form.get('day').invalid && form.get('day').touched">
-        <small *ngIf="form.get('day').errors.required">Поле не может быть пустым </small>
-        <small *ngIf="form.get('day').errors.restrictDay">Числа начинающиеся на нуль не допустимы</small>
-          <small *ngIf="form.get('day').errors.lessDay">В месеце не больше 31 дней</small>
-        </div>
-      </div>
-      <div class="myclass2">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="inputGroup-month">Месяц</span>
-          <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
-                 formControlName="month" maxlength="2">
-        </div>
-        <div *ngIf="form.get('month').invalid && form.get('month').touched">
-          <small *ngIf="form.get('month').errors.required">Поле не может быть пустым </small>
-          <small *ngIf="form.get('month').errors.lessMonth">В году 12 месяцев</small>
-        </div>
-      </div>
+  <h1 class="text-center"><p class="text-center">{{ title }}</p></h1>
 
-      <div class="myclass2">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="inputGroup-year">Год</span>
-          <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
-                 formControlName="year" maxlength="4">
+  <div class="row">
+
+    <div class="col-md-2 ">
+    </div>
+
+    <div class="col-md-4 col-md-offset-3">
+      <form class="float-md-left" [formGroup]="form" (ngSubmit)="addTask()">
+
+        <div class="padding-10">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-day">День</span>
+            <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
+                   formControlName="day"
+                   maxlength="2"
+                   size="10">
+          </div>
+          <div *ngIf="form.get('day').invalid && form.get('day').touched">
+            <small *ngIf="form.get('day').errors.required">Поле не может быть пустым </small>
+            <small *ngIf="form.get('day').errors.restrictDay">Числа начинающиеся на нуль не допустимы</small>
+            <small *ngIf="form.get('day').errors.lessDay">В месеце не больше 31 дней</small>
+          </div>
         </div>
-        <div *ngIf="form.get('year').invalid && form.get('year').touched">
-          <small *ngIf="form.get('year').errors.required">Поле не может быть пустым </small>
-          <small *ngIf="form.get('year').errors.minLength">Год должен быть записан в формате ГГГГ</small>
+        <div class="padding-10">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-month">Месяц</span>
+            <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
+                   formControlName="month" maxlength="2">
+          </div>
+          <div *ngIf="form.get('month').invalid && form.get('month').touched">
+            <small *ngIf="form.get('month').errors.required">Поле не может быть пустым </small>
+            <small *ngIf="form.get('month').errors.lessMonth">В году 12 месяцев</small>
+          </div>
         </div>
-      </div>
-      <div class="myclass2">
-      <button type="submit" class="btn btn-dark" [disabled]="form.invalid">Пуск</button>
+
+        <div class="padding-10">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-year">Год</span>
+            <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
+                   formControlName="year" maxlength="4">
+          </div>
+          <div *ngIf="form.get('year').invalid && form.get('year').touched">
+            <small *ngIf="form.get('year').errors.required">Поле не может быть пустым </small>
+            <small *ngIf="form.get('year').errors.minLength">Год должен быть записан в формате ГГГГ</small>
+          </div>
+        </div>
+        <div class="padding-10">
+          <button type="submit" class="btn btn-dark" [disabled]="form.invalid">Рассчитать</button>
+        </div>
+      </form>
+    </div>
+
+
+    <div class="col-md-4 col-md-pull-7">
+      <div class="container">
+        <div class="d-flex float-md-right h-100">
+          <div class="image_outer_container">
+            <div class="image_inner_container">
+              <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/spiderman.jpg"
+                   class="rounded-circle"/>
+            </div>
+            <div class="divider py-1"></div>
+
+            <div class="row">
+              <div class="col-md-1 col-md-offset-3">
+                <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
+              </div>
+<!--              <div class="col-md-1"></div>-->
+              <div class="col-md mx-md-1">
+                <a  href='https://www.instagram.com/070boroda/'>My page in Instagram</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
       </div>
     </div>
-  </form>
+<!--    <div class="col-md-2 ">-->
+<!--    </div>-->
+  </div>
 
-  <h2> <p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market</p> </h2>
+  <div class="divider py-3 "></div>
 
-    <div class="row-centered">
-      <a href='https://play.google.com/store/apps/details?id=com.zelianko.numerologic&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-        <img width="240" height="92" alt='Доступно в Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/ru_badge_web_generic.png'/></a>
-    </div>
+  <h2><p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market</p></h2>
+
+  <div class="row-centered">
+    <a
+      href='https://play.google.com/store/apps/details?id=com.zelianko.numerologic&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+      <img width="240" height="92" alt='Доступно в Google Play'
+           src='https://play.google.com/intl/en_us/badges/static/images/badges/ru_badge_web_generic.png'/></a>
+  </div>
   <div>
+    <div class="divider py-2 "></div>
     <table class="table table-bordered">
       <thead>
-      <th>Число судьбы <strong>{{digestSoul}}</strong></th>
-      <th>Доп Числа {{oneNumber}}.{{secondNumber}}.{{thirdNumber}}.{{fourthNumber}}</th>
+      <th>Число судьбы <strong>{{ digestSoul }}</strong></th>
+      <th>Доп Числа {{ oneNumber }}.{{ secondNumber }}.{{ thirdNumber }}.{{ fourthNumber }}</th>
       <th></th>
-      <th>Темперамент: {{three.length + five.length + seven.length}}</th>
+      <th>Темперамент: {{ three.length + five.length + seven.length }}</th>
 
       </thead>
       <tbody>
       <tr>
-        <td><small>Характер</small><p>{{one}}</p></td>
-        <td><small>Здоровье</small><p>{{four}}</p></td>
-        <td><small>Удача</small><p>{{seven}}</p></td>
-        <th>Цель: {{one.length + four.length + seven.length }}</th>
+        <td><small>Характер</small>
+          <p>{{ one }}</p></td>
+        <td><small>Здоровье</small>
+          <p>{{ four }}</p></td>
+        <td><small>Удача</small>
+          <p>{{ seven }}</p></td>
+        <th>Цель: {{ one.length + four.length + seven.length }}</th>
       </tr>
       <tr>
-        <td><small>Энергия</small><p>{{two}}</p></td>
-        <td><small>Логика</small><p>{{five}}</p></td>
-        <td><small>Долг</small><p>{{eight}}</p></td>
-        <th>Семья: {{two.length + five.length + eight.length}}</th>
+        <td><small>Энергия</small>
+          <p>{{ two }}</p></td>
+        <td><small>Логика</small>
+          <p>{{ five }}</p></td>
+        <td><small>Долг</small>
+          <p>{{ eight }}</p></td>
+        <th>Семья: {{ two.length + five.length + eight.length }}</th>
       </tr>
       <tr>
-        <td><small>Интерес</small><p>{{three}}</p></td>
-        <td><small>Труд</small><p>{{six}}</p></td>
-        <td><small>Память</small><p>{{nine}}</p></td>
-        <th>Привычки: {{three.length + six.length + nine.length}}</th>
+        <td><small>Интерес</small>
+          <p>{{ three }}</p></td>
+        <td><small>Труд</small>
+          <p>{{ six }}</p></td>
+        <td><small>Память</small>
+          <p>{{ nine }}</p></td>
+        <th>Привычки: {{ three.length + six.length + nine.length }}</th>
       </tr>
       <tr>
         <td></td>
-        <th>Быт: {{four.length + five.length + six.length}}</th>
+        <th>Быт: {{ four.length + five.length + six.length }}</th>
         <td></td>
       </tr>
       </tbody>
     </table>
   </div>
-  <p align="centre"><strong>{{one}}/{{two}}/{{three}}/{{four}}/{{five}}/{{six}}/{{seven}}/{{eight}}/{{nine}} ЧС {{digestSoul}} </strong></p>
+  <p align="centre"><strong>{{ one }}/{{ two }}/{{ three }}/{{ four }}/{{ five }}/{{ six }}/{{ seven }}/{{ eight }}
+    /{{ nine }} ЧС {{ digestSoul }} </strong></p>
 </div>
 
