--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
 
-  <h1 class="text-center"><p class="text-center">{{ title }}</p></h1>
-
+<!--  <h1 class="text-center"><p class="text-center">{{ title }}</p></h1>-->
+  <div class="divider py-3 "></div>
+  <div class="divider py-3 "></div>
+  <div class="divider py-3 "></div>
   <div class="row">
 
     <div class="col-md-2 ">
@@ -84,14 +86,6 @@
 
   <div class="divider py-3 "></div>
 
-  <h2><p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market</p></h2>
-
-  <div class="row-centered">
-    <a
-      href='https://play.google.com/store/apps/details?id=com.zelianko.numerologic&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-      <img width="240" height="92" alt='Доступно в Google Play'
-           src='https://play.google.com/intl/en_us/badges/static/images/badges/ru_badge_web_generic.png'/></a>
-  </div>
   <div>
     <div class="divider py-2 "></div>
     <table class="table table-bordered">
@@ -140,5 +134,15 @@
   </div>
   <p align="centre"><strong>{{ one }}/{{ two }}/{{ three }}/{{ four }}/{{ five }}/{{ six }}/{{ seven }}/{{ eight }}
     /{{ nine }} ЧС {{ digestSoul }} </strong></p>
+  <div class="divider py-3 "></div>
+  <div class="divider py-3 "></div>
+  <h2><p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market</p></h2>
+
+  <div class="row-centered">
+    <a
+      href='https://play.google.com/store/apps/details?id=com.zelianko.numerologic&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+      <img width="240" height="92" alt='Доступно в Google Play'
+           src='https://play.google.com/intl/en_us/badges/static/images/badges/ru_badge_web_generic.png'/></a>
+  </div>
 </div>
 
