--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
-body{
-  background-size: 100%;
-  color: #ffffff;
+
+
+.container-background-color{
+  background: #faf9f9;
 }
 
 
