--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,45 @@
 <div class="container">
 
-<!--  <h1 class="text-center"><p class="text-center">{{ title }}</p></h1>-->
   <div class="divider py-3 "></div>
+  <h2 class="text-center"><p class="text-center">{{ title }}</p></h2>
   <div class="divider py-3 "></div>
-  <div class="divider py-3 "></div>
+
+<!--  Первая строка аватарка и форма ввода даты-->
   <div class="row">
 
     <div class="col-md-2 ">
     </div>
+    <div class="col-md-4">
+      <div class="container">
+        <div class="d-flex float-md-right h-100">
+          <div class="image_outer_container">
+            <div class="image_inner_container">
+              <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/ava.png"
+                   class="rounded-circle"/>
+            </div>
+            <div class = row>
+              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
+              <a  href='https://t.me/cifralarisa'>Мой канал в Telegram</a>
+            </div>
+<!--            Ссылка на инсту-->
+<!--            <div class = row>-->
+<!--            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">-->
+<!--            <a  href='https://www.instagram.com/070boroda/'>Моя страница в Instagram</a>-->
+<!--            </div>-->
+        </div>
+      </div>
+    </div>
+
+    </div>
+
+
 
     <div class="col-md-4 col-md-offset-3">
       <form class="float-md-left" [formGroup]="form" (ngSubmit)="addTask()">
 
         <div class="padding-10">
           <div class="input-group-prepend">
-            <span class="input-group-text" id="inputGroup-day">День</span>
+            <span class="input-group-text" id="inputGroup-day"><p>День</p></span>
             <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
                    formControlName="day"
                    maxlength="2"
@@ -28,7 +53,7 @@
         </div>
         <div class="padding-10">
           <div class="input-group-prepend">
-            <span class="input-group-text" id="inputGroup-month">Месяц</span>
+            <span class="input-group-text" id="inputGroup-month"><p>Месяц</p></span>
             <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
                    formControlName="month" maxlength="2">
           </div>
@@ -40,7 +65,7 @@
 
         <div class="padding-10">
           <div class="input-group-prepend">
-            <span class="input-group-text" id="inputGroup-year">Год</span>
+            <span class="input-group-text" id="inputGroup-year"><p>Год</p></span>
             <input type="text" class="form-control" aria-label="small" aria-describedby="inputGroup-sizing-sm"
                    formControlName="year" maxlength="4">
           </div>
@@ -54,35 +79,8 @@
         </div>
       </form>
     </div>
-
-
-    <div class="col-md-4 col-md-pull-7">
-      <div class="container">
-        <div class="d-flex float-md-right h-100">
-          <div class="image_outer_container">
-            <div class="image_inner_container">
-              <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/spiderman.jpg"
-                   class="rounded-circle"/>
-            </div>
-            <div class="divider py-1"></div>
-
-            <div class="row">
-              <div class="col-md-1 col-md-offset-3">
-                <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-              </div>
-<!--              <div class="col-md-1"></div>-->
-              <div class="col-md mx-md-1">
-                <a  href='https://www.instagram.com/070boroda/'>My page in Instagram</a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-<!--    <div class="col-md-2 ">-->
-<!--    </div>-->
   </div>
+
 
   <div class="divider py-3 "></div>
 
@@ -90,30 +88,30 @@
     <div class="divider py-2 "></div>
     <table class="table table-bordered">
       <thead>
-      <th>Число судьбы <strong>{{ digestSoul }}</strong></th>
-      <th>Доп Числа {{ oneNumber }}.{{ secondNumber }}.{{ thirdNumber }}.{{ fourthNumber }}</th>
-      <th></th>
-      <th>Темперамент: {{ three.length + five.length + seven.length }}</th>
+      <th class="black-text-color th-background-color-out">Число судьбы <strong>{{ digestSoul }}</strong></th>
+      <th class="black-text-color th-background-color-out">Доп Числа {{ oneNumber }}.{{ secondNumber }}.{{ thirdNumber }}.{{ fourthNumber }}</th>
+      <th class="th-background-color-out"></th>
+      <th class="black-text-color th-background-color-out">Темперамент: {{ three.length + five.length + seven.length }}</th>
 
       </thead>
       <tbody>
       <tr>
-        <td><small>Характер</small>
+        <td class="black-text-color"><small>Характер</small>
           <p>{{ one }}</p></td>
-        <td><small>Здоровье</small>
+        <td class="black-text-color"><small>Здоровье</small>
           <p>{{ four }}</p></td>
-        <td><small>Удача</small>
+        <td class="black-text-color"><small>Удача</small>
           <p>{{ seven }}</p></td>
-        <th>Цель: {{ one.length + four.length + seven.length }}</th>
+        <th class="black-text-color th-background-color-out">Цель: {{ one.length + four.length + seven.length }}</th>
       </tr>
       <tr>
-        <td><small>Энергия</small>
+        <td ><small>Энергия</small>
           <p>{{ two }}</p></td>
         <td><small>Логика</small>
           <p>{{ five }}</p></td>
         <td><small>Долг</small>
           <p>{{ eight }}</p></td>
-        <th>Семья: {{ two.length + five.length + eight.length }}</th>
+        <th class="black-text-color th-background-color-out">Семья: {{ two.length + five.length + eight.length }}</th>
       </tr>
       <tr>
         <td><small>Интерес</small>
@@ -122,11 +120,12 @@
           <p>{{ six }}</p></td>
         <td><small>Память</small>
           <p>{{ nine }}</p></td>
-        <th>Привычки: {{ three.length + six.length + nine.length }}</th>
+        <th class="black-text-color th-background-color-out">Привычки: {{ three.length + six.length + nine.length }}</th>
       </tr>
       <tr>
         <td></td>
-        <th>Быт: {{ four.length + five.length + six.length }}</th>
+        <th class="black-text-color th-background-color-out">Быт: {{ four.length + five.length + six.length }}</th>
+        <td></td>
         <td></td>
       </tr>
       </tbody>
@@ -134,9 +133,8 @@
   </div>
   <p align="centre"><strong>{{ one }}/{{ two }}/{{ three }}/{{ four }}/{{ five }}/{{ six }}/{{ seven }}/{{ eight }}
     /{{ nine }} ЧС {{ digestSoul }} </strong></p>
-  <div class="divider py-3 "></div>
-  <div class="divider py-3 "></div>
-  <h2><p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market</p></h2>
+  <div class="divider py-2 "></div>
+<!--  <h2><p align="centre"> Теперь вы можете скачать приложение для расчета в Google Play Market</p></h2>-->
 
   <div class="row-centered">
     <a
