[AN-016] - расчет для определенного пользователя, все работает

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
               <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/ava.png"
                    class="rounded-circle"/>
             </div>
+            <div class="divider py-2 "></div>
             <div class = row>
               <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
               <a  href='https://t.me/cifralarisa'>Мой канал в Telegram</a>
