[AN-017] - add kvadrat_nevinovat

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,9 +35,22 @@ TH {
   color: #11118b; /* Цвет текста */
   font-size: 12px;
 }
+//Внешний квадрат
+//1. #e7d7c8
+//2. #c6c3c3
+//3. #99c499
+//4. #d8769e
+//5. #5f9bc2
+
 .th-background-color-out{
   background: #e7d7c8
 }
+
+//1. #f4f1f0
+//2. #e6e6e6
+//3. #d3e8d3
+//4. #efd2de
+//5. #bfd8e8
 
 TD {
   text-align: center; /* Выравнивание по центру */
