--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
+//1. faf9f9
+//2. faf9f9
+//3. f4fdf6
+//4. f1eeef
+//5. f1f1f1
 
 .container-background-color{
   background: #faf9f9;
