[AN-017] - add kamishik

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,16 +17,16 @@
               <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/ava.png"
                    class="rounded-circle"/>
             </div>
-            <div class="divider py-2 "></div>
-            <div class = row>
-              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
-              <a  href='https://t.me/kvadrat_ne_vinovat'>Мой канал в Telegram</a>
-            </div>
-<!--            Ссылка на инсту-->
+<!--            <div class="divider py-2 "></div>-->
 <!--            <div class = row>-->
-<!--            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">-->
-<!--            <a  href='https://www.instagram.com/070boroda/'>Моя страница в Instagram</a>-->
+<!--              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">-->
+<!--              <a  href='https://t.me/kvadrat_ne_vinovat'>Мой канал в Telegram</a>-->
 <!--            </div>-->
+<!--            Ссылка на инсту-->
+            <div class = row>
+            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
+            <a  href='https://www.instagram.com/nastilisa05?igsh=N294bW13bXBncWRn&utm_source=qr'>Страница в Instagram</a>
+            </div>
         </div>
       </div>
     </div>
