[AN-018] - add num-toronto-colangelo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 <!--            Ссылка на инсту-->
             <div class = row>
             <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/nastilisa05?igsh=N294bW13bXBncWRn&utm_source=qr'>Страница в Instagram</a>
+            <a  href='https://www.instagram.com/ne_numerolog_toronto?igsh=MXFqbGNhaHUyaG0zZw%3D%3D&utm_source=qr'>Страница в Instagram</a>
             </div>
         </div>
       </div>
