[AN-020] - add zayzewa anna

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 <!--            Ссылка на инсту-->
             <div class = row>
             <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/zhannaogurlieva?igsh=aG9qNzU5Y2llMDYz&utm_source=qr'>Страница в Instagram</a>
+            <a  href='https://www.instagram.com/zayzewaanna?igsh=OXIyYXNkd3F5OWsz'>Страница в Instagram</a>
             </div>
         </div>
       </div>
