[AN-025] - add katerinamm

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 <!--            Ссылка на инсту-->
             <div class = row>
             <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/alesya.menshova?igsh=MXlqam1vcmhvOXI='>Страница в Instagram</a>
+            <a  href='https://www.instagram.com/katerinamm?igsh=cng5aDd4ZWhhdmpu&utm_source=qr'>Страница в Instagram</a>
             </div>
         </div>
       </div>
