[AN-026] - add rayts anns

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,13 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
-//1. f4fdf6
+//1. faf9f9
 //2. faf9f9
 //3. f4fdf6
 //4. f1eeef
 //5. f1f1f1
 
 .container-background-color{
-  background: #f1eeef;
+  background: #f4fdf6;
 }
 
 
