[AN-028] - add aleksandrina_psy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 <!--            Ссылка на инсту-->
             <div class = row>
             <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/katrine58?igsh=MWZ3Y3BoZGVmMnpqeg%3D%3D&utm_source=qr'>Страница в Instagram</a>
+            <a  href='https://www.instagram.com/aleksandrina_psy?igsh=MWVjZnU3ZzlzaHIzaw%3D%3D&utm_source=qr'>Страница в Instagram</a>
             </div>
         </div>
       </div>
