--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,15 +17,15 @@
               <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/ava.png"
                    class="rounded-circle"/>
             </div>
-            <div class="divider py-2 "></div>
+<!--            <div class="divider py-2 "></div>-->
 <!--            <div class = row>-->
 <!--              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">-->
-<!--              <a  href='https://t.me/prodobro888'>Мой канал в Telegram</a>-->
+<!--              <a  href='https://t.me/krasevaekaterina'>Мой канал в Telegram</a>-->
 <!--            </div>-->
 <!--            Ссылка на инсту-->
             <div class = row>
             <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/nadeschda_4871?igsh=MWJtNzF1eG5rZGlncQ%3D%3D&utm_source=qr'>Страница в Instagram</a>
+            <a  href='https://www.instagram.com/fitkulevanata?igsh=MmdjMHhyNHJ0YTJ3&utm_source=qr'>Страница в Instagram</a>
             </div>
         </div>
       </div>
