[AN-037] - add emelianovamarnumero

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,13 +14,13 @@
         <div class="d-flex float-md-right h-100">
           <div class="image_outer_container">
             <div class="image_inner_container">
-              <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/ava.png"
+              <img width="331" height="384" ngSrc="./assets/resources/ava.png"
                    class="rounded-circle"/>
             </div>
             <div class="divider py-2 "></div>
             <div class = row>
               <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
-              <a  href='https://t.me/kaatikooo_psychoanalisis'>Мой канал в Telegram</a>
+              <a  href='https://t.me/emelianovamarnumero'>Мой канал в Telegram</a>
             </div>
 <!--            Ссылка на инсту-->
 <!--            <div class = row>-->
