--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
             <div class="divider py-2 "></div>
             <div class = row>
               <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
-              <a  href='https://t.me/kaatikooo_psychoanalisis'>Мой канал в Telegram</a>
+              <a  href='https://t.me/emelianovamarnumero'>Мой канал в Telegram</a>
             </div>
 <!--            Ссылка на инсту-->
 <!--            <div class = row>-->
