[AN-041] - 36_natalia_sonich

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 <!--            Ссылка на инсту-->
             <div class = row>
             <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/venerakhabibullina?igsh=M3lpM2FkNGhzam14&utm_source=qr'>Страница в Instagram</a>
+            <a  href='https://www.instagram.com/x.numerolog?igsh=dWFrcnNnc2VqOWE2'>Страница в Instagram</a>
             </div>
         </div>
       </div>
