--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,7 +43,7 @@ TH {
 //5. #5f9bc2
 
 .th-background-color-out{
-  background: #c6c3c3
+  background: #e7d7c8
 }
 
 //1. #f4f1f0
@@ -55,7 +55,7 @@ TH {
 TD {
   text-align: center; /* Выравнивание по центру */
   color: #11118b;
-  background: #e6e6e6
+  background: #f4f1f0
 }
 
 span{
