[AN-043] - 38_oksana_nenumerolog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,15 +18,15 @@
                    class="rounded-circle" height="180" width="180"/>
             </div>
             <div class="divider py-2 "></div>
-<!--            <div class = row>-->
-<!--              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">-->
-<!--              <a  href='https://t.me/stat_psy'>Мой канал в Telegram</a>-->
-<!--            </div>-->
-<!--            Ссылка на инсту-->
             <div class = row>
-            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/marine_pro_matrix?igsh=MWhrd2FpYWd2MXcydw=='>Страница в Instagram</a>
+              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
+              <a  href='https://t.me/Oksana_neonumerolog'>Мой канал в Telegram</a>
             </div>
+<!--            Ссылка на инсту-->
+<!--            <div class = row>-->
+<!--            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">-->
+<!--            <a  href='https://www.instagram.com/marine_pro_matrix?igsh=MWhrd2FpYWd2MXcydw=='>Страница в Instagram</a>-->
+<!--            </div>-->
         </div>
       </div>
     </div>
